# consoleLoadingbar

./: .gitignore  CMakeLists.txt  License.txt  Readme.md
.github/workflows/: cmake-win.yml  codeql-analysis.yml
Test_consoleLoadingbar/: CMakeLists.txt  consoleLoadingbar.cpp  consoleLoadingbar.h  killhandler.h
lib/: CMakeLists.txt  consoleLoadingBar.cpp  consoleLoadingBar.h
